2001-12-21  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): accelerate pixbuf sets.
	(cmd_get_menu_pixbuf): upd.

	* bonobo/bonobo-ui-toolbar-control-item.c
	(impl_set_icon): upd. but this can never have worked.

	* bonobo/bonobo-ui-toolbar-button-item.c
	(bonobo_ui_toolbar_button_item_set_image): un-type
	the image pointer so we can shoehorn GdkPixbufs in.
	(bonobo_ui_toolbar_button_item_construct, impl_set_icon): upd.
	(set_image): re-impl. for more efficiency.

	* bonobo/bonobo-ui-sync-toolbar.c
	(cmd_get_toolbar_image): upd.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_get_pixbuf): update sig.
	(bonobo_ui_image_set_pixbuf): impl.

2001-12-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* tests/test-moniker.c: added exception's text to error messages

	* monikers/bonobo-moniker-extra.[ch]: extra moniker factory

	* monikers/bonobo-moniker-conf-indirect.c: implemented new
	conf_indirect: moniker

	* configure.in:
	* Makefile.am: added monikers directory

2001-12-20  Michael Meeks  <michael@ximian.com>

	* bonobo/*.c: use bonobo_ui_node_peek_attr to save doing
	lots of wasteful malloc / frees all over the shop.

2001-12-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_xml_get_pixbuf): stub.

2001-12-18  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c (bonobo_ui_node_peek_attr): impl.

2001-12-17  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c
	(bonobo_ui_engine_update): find the sync once here.
	(bonobo_ui_engine_update_node): simplify checks.

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): pass 'sync' here.

	* bonobo/bonobo-control-frame.c
	(bonobo_control_frame_set_propbag): fix cast.

	* bonobo/bonobo-ui-engine.c (bonobo_ui_engine_update):
	instrument with 'access' calls.

2001-12-15  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c (bonobo_control_do_popup):
	fixup return value.
